--- a/quiz.html
+++ b/quiz.html
@@ -16,8 +16,8 @@
 		// for(var x=0; x<newtings.length; x++){
 		//     $('body').append('<div id="' + newtings[x] + '">' + newtings[x] + '</div>');
 		// }
-		
-		var array = ["one","two","three","four","five"];
+
+		var array = ["one","two","three","four","five"]; // need this to be an object I guess
 		console.log("array = "+array);
 		for(var x=0; x<array.length; x++){
 			//var elm = '<div class="' + array[x] + '">';
@@ -32,6 +32,20 @@
 		//   $('body').append( newdiv  );
 		// });
 		});
+		// below is one of those always on functions
+		$(function() {
+            $(".guessed").change(function() {
+            	console.log("BOOYA");
+            	console.log($(".guessed"));
+            	console.log($(this).parent());
+            	$(this).parent().css( "background-color", "red" );
+	            });
+        }); // end always on function
+		$(function() {
+            $(".skip").change(function() {
+            	console.log("LOSER");
+	            });
+        }); // end always on function
 		</script>
 		<style type="text/css">
 		div {
@@ -51,51 +65,52 @@
 		</div>
 		<div class = "one">
 		<!-- <div class="radio-guessed"> -->
-              <input class="radio-input" id="guessed" type="radio" name="one" required="required">
-              <label class="guessed" for="radio">Guessed?</label>
+		<!--| alternative class designation = <input class="radio-input" |-->
+              <input class="guessed" id="oneG" type="radio" name="one" required="required">
+              <label class="guessedL" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="radio-input" id="guessed" type="radio" name="one" required="required">
+              <input class="skip" id="oneS" type="radio" name="one" required="required">
               <label class="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
 		<div class = "two">
 		<!-- <div class="radio-guessed"> -->
-              <input class="radio-input" id="guessed" type="radio" name="two" required="required">
-              <label class="guessed" for="radio">Guessed?</label>
+              <input class="guessed" id="twoG" type="radio" name="two" required="required">
+              <label class="guessedL" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="radio-input" id="guessed" type="radio" name="two" required="required">
+              <input class="skip" id="twoS" type="radio" name="two" required="required">
               <label class="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
 		<div class = "three">
 		<!-- <div class="radio-guessed"> -->
-              <input class="radio-input" id="guessed" type="radio" name="three" required="required">
-              <label class="guessed" for="radio">Guessed?</label>
+              <input class="guessed" id="threeG" type="radio" name="three" required="required">
+              <label class="guessedL" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="radio-input" id="guessed" type="radio" name="three" required="required">
+              <input class="skip" id="threeS" type="radio" name="three" required="required">
               <label class="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
 		<div class = "four">
 		<!-- <div class="radio-guessed"> -->
-              <input class="radio-input" id="guessed" type="radio" name="four" required="required">
-              <label class="guessed" for="radio">Guessed?</label>
+              <input class="guessed" id="fourG" type="radio" name="four" required="required">
+              <label class="guessedL" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="radio-input" id="guessed" type="radio" name="four" required="required">
+              <input class="skip" id="fourS" type="radio" name="four" required="required">
               <label class="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
 		<div class = "five">
 		<!-- <div class="radio-guessed"> -->
-              <input class="radio-input" id="guessed" type="radio" name="five" required="required">
-              <label class="guessed" for="radio">Guessed?</label>
+              <input class="guessed" id="fiveG" type="radio" name="five" required="required">
+              <label class="guessedL" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="radio-input" id="guessed" type="radio" name="five" required="required">
+              <input class="skip" id="fiveS" type="radio" name="five" required="required">
               <label class="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
