--- a/quiz.html
+++ b/quiz.html
@@ -1,8 +1,13 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/themes/3000ms.css" />
+	<link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile.structure-1.4.2.min.css" /> 
+	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script> 
+	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script> 
+	<script>
 
 		function forEachIn(object, action) {
 			for (var property in object) {
@@ -66,7 +71,7 @@
 
 			console.log(JSON[0].name);
 			//console.log("array = "+array);
-			for(var x=0; x<JSON2.length; x++){
+			for(var x=0; x<JSON.length; x++){
 				//var elm = '<div class="' + array[x] + '">';
 				var elm = $("."+JSON[x].name);
 				console.log(elm);
@@ -97,7 +102,7 @@
 
 		});
 
-		// below is one of those always on functions
+		// below is one of those always on functions / "self invoking"
 		$(function() {
             $(".guessed").change(function() {
             	console.log("BOOYA");
@@ -116,6 +121,9 @@
         	$('span').css("visibility", "block");
         	return false;
         }
+        function permitFlip(){ // ensure flip button disengaged until all questions answered
+
+        }
 		</script>
 		<style type="text/css">
 		div {
@@ -131,6 +139,7 @@
 		<div id="test">
 			Yo
 		<button class="button" onclick="return commence()">Start Game</button>
+		<button class="button" style="pointer-events:none;opacity:0.2" onclick="return flip()">Next Questions</button>
 		<br>
 		</div>
 		<div class = "one">
