--- a/quiz.html
+++ b/quiz.html
@@ -1,13 +1,13 @@
 <html>
+
+
+
 	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/themes/3000ms.css" />
-	<link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile.structure-1.4.2.min.css" /> 
-	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script> 
-	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script> 
-	<script>
+
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script>
 
 		function forEachIn(object, action) {
 			for (var property in object) {
@@ -73,7 +73,7 @@
 			//console.log("array = "+array);
 			for(var x=0; x<JSON.length; x++){
 				//var elm = '<div class="' + array[x] + '">';
-				var elm = $("."+JSON[x].name);
+				var elm = $("#"+JSON[x].name);
 				console.log(elm);
 			    //elm.append('<div class="' + array[x] + '">' + array[x] + '</div>');
 			    elm.prepend("<span>"+JSON[x].name+"</span>");
@@ -102,19 +102,32 @@
 
 		});
 
+		$(function() {
+			$('input').change(function(){
+				console.log("an input change detected!");
+				if($(this).context.name == "guessed"){
+					console.log("BOOYA!!!!");
+					$(this).parent().css( "display", "none" );
+				} else if ($(this).context.name == "skip") {
+					console.log("LOSER");
+	            	$(this).parent().css( "background-color", "red" );
+				}
+			});
+		});
+
 		// below is one of those always on functions / "self invoking"
 		$(function() {
             $(".guessed").change(function() {
-            	console.log("BOOYA");
-            	console.log($(".guessed"));
+            	//console.log("BOOYA");
+            	//console.log($(".guessed"));
             	console.log($(this).parent());
-            	$(this).parent().css( "display", "none" );
+            	//$(this).parent().css( "display", "none" );
 	            });
         }); // end always on function
 		$(function() {
             $(".skip").change(function() {
-            	console.log("LOSER");
-            	$(this).parent().css( "background-color", "red" );
+            	// console.log("LOSER");
+            	// $(this).parent().css( "background-color", "red" );
 	            });
         }); // end always on function
         function commence(){
@@ -138,59 +151,59 @@
 		Oh Hai<br>
 		<div id="test">
 			Yo
-		<button class="button" onclick="return commence()">Start Game</button>
-		<button class="button" style="pointer-events:none;opacity:0.2" onclick="return flip()">Next Questions</button>
+		<button class="ui-btn" onclick="return commence()">Start Game</button>
+		<button class="ui-btn" style="pointer-events:none;opacity:0.2" onclick="return flip()">Next Questions</button>
 		<br>
 		</div>
-		<div class = "one">
+		<div id = "one">
 		<!-- <div class="radio-guessed"> -->
 		<!--| alternative class designation = <input class="radio-input" |-->
-              <input class="guessed" id="oneG" type="radio" name="one" required="required">
-              <label class="guessedL" for="radio">Guessed?</label>
+              <input class="guessed" id="oneG" type="radio" name="guessed" required="required">
+              <label class="ui-mobile" name="guessed" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="skip" id="oneS" type="radio" name="one" required="required">
-              <label class="skip" for="radio-2">Skip?</label>
+              <input class="skip" id="oneS" type="radio" name="skip" required="required">
+              <label class="skip" name="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
-		<div class = "two">
+		<div id = "two">
 		<!-- <div class="radio-guessed"> -->
-              <input class="guessed" id="twoG" type="radio" name="two" required="required">
-              <label class="guessedL" for="radio">Guessed?</label>
+              <input class="guessed" id="twoG" type="radio" name="guessed" required="required">
+              <label class="ui-mobile" name="guessed" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="skip" id="twoS" type="radio" name="two" required="required">
-              <label class="skip" for="radio-2">Skip?</label>
+              <input class="skip" id="twoS" type="radio" name="skip" required="required">
+              <label class="skip" name="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
-		<div class = "three">
+		<div id = "three">
 		<!-- <div class="radio-guessed"> -->
-              <input class="guessed" id="threeG" type="radio" name="three" required="required">
-              <label class="guessedL" for="radio">Guessed?</label>
+              <input class="guessed" id="threeG" type="radio" name="guessed" required="required">
+              <label class="ui-mobile" name="guessed" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="skip" id="threeS" type="radio" name="three" required="required">
-              <label class="skip" for="radio-2">Skip?</label>
+              <input class="skip" id="threeS" type="radio" name="skip" required="required">
+              <label class="skip" name="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
-		<div class = "four">
+		<div id = "four">
 		<!-- <div class="radio-guessed"> -->
-              <input class="guessed" id="fourG" type="radio" name="four" required="required">
-              <label class="guessedL" for="radio">Guessed?</label>
+              <input class="guessed" id="fourG" type="radio" name="guessed" required="required">
+              <label class="ui-mobile" name="guessed" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="skip" id="fourS" type="radio" name="four" required="required">
-              <label class="skip" for="radio-2">Skip?</label>
+              <input class="skip" id="fourS" type="radio" name="skip" required="required">
+              <label class="skip" name="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
-		<div class = "five">
+		<div id = "five">
 		<!-- <div class="radio-guessed"> -->
-              <input class="guessed" id="fiveG" type="radio" name="five" required="required">
-              <label class="guessedL" for="radio">Guessed?</label>
+              <input class="guessed" id="fiveG" type="radio" name="guessed" required="required">
+              <label class="ui-mobile" name="guessed" for="radio">Guessed?</label>
         <!-- </div> -->
             <!-- <div class="radio-skip"> -->
-              <input class="skip" id="fiveS" type="radio" name="five" required="required">
-              <label class="skip" for="radio-2">Skip?</label>
+              <input class="skip" id="fiveS" type="radio" name="skip" required="required">
+              <label class="skip" name="skip" for="radio-2">Skip?</label>
             <!-- </div> -->
 		</div>
 
