--- a/questions.html
+++ b/questions.html
@@ -28,11 +28,17 @@ var questions = {
 };
 count = function(subjects) {
 	// check for number index
-	cnt = 0;
-	forEachIn(subjects, function(k,v){cnt+=v.length;});
+	var totalTopics = Object.keys(subjects).length;
+	var cnt = {};
+	forEachIn(subjects, function(k,v){
+		l=v.length;
+		cnt[k] = l;
+	});
 	return cnt;
 }
-
+leastUsed = function(){
+	// sorting algorithm time!
+}
 
 console.log("goodbye");
 //console.log(questions[0].tv); // for array of object with arrays
@@ -43,6 +49,7 @@ console.log("object questions = "+ typeof questions);
 console.log("invoking Object.keys on object questions, returns :."+typeof Object.keys(questions));
 var num = count(questions);
 console.log(num);
+console.log(Object.keys(questions).length);
 // checking number checking
 //forEach(Object.keys(questions), function(a){console.log(isNaN(a));});
 
@@ -61,6 +68,7 @@ get(int index){
 }
 
 topicCounts( topicArray ){
+
 // returns true if all arrays have even counts, false if not, and some Game Over parameter when all the questions have been exhausted
 	array.length;
 	https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every
