--- a/arraydt.html
+++ b/arraydt.html
@@ -76,9 +76,15 @@ function shuffle(nuArray, array, object) { // array is here the one from which t
 	// element = Math.floor((Math.random() * 9)) // gen random number
 	console.log(nuArray.length);
 	console.log(typeof nuArray);
-	forEach(array, function (a) { element = 2; console.log(object[a][element]); nuArray.push(object[a].splice(element, 1))});
+	forEach(array, function (a) {
+		element = Math.floor((Math.random() * 9));
+		console.log(object[a].splice(element, 1));
+		nuArray.push(object[a][element]);
+		object[a].splice(element, 1);
+	});
 	// the prob with above is that it returns an array of arrays
 	// this is because object[a].splice(element, 1) returns an array, - test with console.log to be certain
+	// nuArray.push(object[a].splice(element, 1)) <- this is the attempt to assign and remove in the one go
 	console.log(nuArray);
 	console.log(typeof nuArray);
 	return nuArray;
@@ -86,5 +92,16 @@ function shuffle(nuArray, array, object) { // array is here the one from which t
 rr = [];
 rr = shuffle(rr,numArr,questions);
 console.log(rr);
+console.log(questions[1]);
+console.log(questions[2]);
+console.log(questions[5]);
+
+// testing objects and arrays
+console.log("questions and answers, object[key], object[key][arrayIndex], object[key].splice(index,howMany)");
+console.log(questions[1]);
+console.log(questions[1][0]);
+console.log(questions[1].splice(0, 1));
+// answer: arraySplice return methods If only one element is removed, an array of one element is returned
+
 </script>
 </html>
