--- a/testadt.html
+++ b/testadt.html
@@ -54,10 +54,8 @@ function chooseFive(nuArray, topic, object, peek) {
 	return nuArray;
 	}
 };
-// randTopics = shuffle(allTopics); = returns strings rather than numbers - so annoying!
-var allTopics = [0,1,2,3,4,5,6,7,8,9];
-console.log(allTopics);
-//Object.keys(questions);
+
+//var allTopics = Object.keys(questions); //  = returns strings rather than numbers - but still functions as desired!!
 
 function shuffle(array) {
   var tmp, current, top = array.length;
@@ -71,12 +69,10 @@ function shuffle(array) {
 }
 
 // this needs to happen for every iteration
-allTopics = shuffle(allTopics);
+allTopics = shuffle(Object.keys(questions));
 var round1 = allTopics.slice(0,5);
 var round2 = allTopics.slice(5,10);
 
-console.log(round1);
-console.log(round2);
 
 first = chooseFive([],round1,questions, false);
 //pk=[];
